@@ -20,6 +20,13 @@
     <version>0.9-SNAPSHOT</version>
     <packaging>war</packaging>
     <description>The ehcache W3C and RESTful web services server.</description>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>src/assemble/LICENSE.txt</url>
+        </license>
+    </licenses>
+    <url>http://ehcache.org/documentation/cache_server.html</url>
     <dependencies>
         <!-- IntelliJ Issue. Hibernate has a transitive dep on asm, but a later
         version is required for javax.ws.rs. The only thing that
@@ -88,28 +95,6 @@
             <version>3.1</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.ning</groupId>-->
-            <!--<artifactId>async-http-client</artifactId>-->
-            <!--<version>1.0.0-SNAPSHOT</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.jboss.netty</groupId>-->
-            <!--<artifactId>netty</artifactId>-->
-            <!--<version>3.2.0.BETA1</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>javax.servlet</groupId>-->
-                    <!--<artifactId>servlet-api</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>commons-logging</groupId>-->
-                    <!--<artifactId>commons-logging</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -498,6 +483,7 @@
                 <updatePolicy>daily</updatePolicy>
             </snapshots>
         </repository>
+        <!--Turn off snapshots. We always build against a released Cache version-->
         <!--<repository>-->
             <!--<id>sourceforge-snapshots</id>-->
             <!--<url>http://oss.sonatype.org/content/repositories/sourceforge-snapshots</url>-->
@@ -513,13 +499,6 @@
             <!--<snapshots>-->
                 <!--<enabled>true</enabled>-->
                 <!--<updatePolicy>daily</updatePolicy>-->
-            <!--</snapshots>-->
-        <!--</repository>-->
-        <!--<repository>-->
-            <!--<id>repository.jboss.org</id>-->
-            <!--<url>http://repository.jboss.org/maven2</url>-->
-            <!--<snapshots>-->
-                <!--<enabled>false</enabled>-->
             <!--</snapshots>-->
         <!--</repository>-->
     </repositories>
